# ecsact_lang_rust

./: .bazelrc  .clippy.toml  .gitignore  Cargo.toml  LICENSE.md  WORKSPACE.bazel  codegen_plugin.bzl
.github/workflows/: main.yml  release.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
ecsact/: BUILD.bazel  Cargo.toml  README.md
ecsact/src/: lib.rs  support.rs
ecsact_dylib_runtime/: BUILD.bazel  Cargo.toml  README.md  build.rs
ecsact_dylib_runtime/src/: dylib.cc  dylib_wrapper.h  lib.rs
ecsact_env/: BUILD.bazel  Cargo.toml
ecsact_env/src/: lib.rs
ecsact_macro/: BUILD.bazel  Cargo.toml  README.md
ecsact_macro/src/: codegen.rs  internal.rs  lib.rs  system_impl.rs
ecsact_rtb/: BUILD.bazel  Cargo.toml
ecsact_rtb/src/: lib.rs  wrapper.h
ecsact_rtb/src/template/: README.md  core.rs  crate_lib.rs  dynamic.rs  system_execution_context.rs
ecsact_runtime/: Cargo.toml  build.rs
ecsact_runtime/src/: core.rs  lib.rs  wrapper.h
ecsact_rust_codegen/: BUILD.bazel  Cargo.toml  README.md
ecsact_system_execution_context/: .gitignore  BUILD.bazel  Cargo.toml  build.rs
ecsact_system_execution_context/src/: lib.rs  wrapper.h
example/: .gitignore  Cargo.toml  build.rs
example/src/: example.ecsact  example.ecsact.cs  example.ecsact.rs  example_ecsact.rs  lib.rs  main.rs  system_impls.rs
examples/: example.ecsact  example.ecsact.rs
rust_source_codegen/: BUILD.bazel  Cargo.toml
rust_source_codegen/src/: lib.rs
