load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

package(default_visibility = ["//visibility:public"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    aliases = aliases(),
    deps = all_crate_deps(
        build = True,
    ),
    build_script_env = {
        "ECSACT_RUNTIME_HEADERS": "$(execpaths @ecsact_runtime//:headers)",
        "ECSACT_RUST_DYLIB_CC": "$(execpath src/dylib.cc)",
        "ECSACT_RUST_DYLIB_WRAPPER_H": "$(execpath src/dylib_wrapper.h)",
    },
    data = [
        "@ecsact_runtime//:headers",
        "src/dylib.cc",
        "src/dylib_wrapper.h",
    ],
)

rust_library(
    name = "ecsact_dylib_runtime",
    aliases = aliases(),
    srcs = glob(["src/*.rs"]),
    deps = [":build_script", "//ecsact"] + all_crate_deps(
        normal = True,
    ),
)
