[package]
name = "ecsact_env"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ecsact-dev/ecsact_lang_rust"
license = "MIT"
homepage = "https://ecsact.dev"
description = "Ecsact environment support crate"

[features]
cargo = []
default = ["cargo"]

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

