[package]
name = "ecsact_macro"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ecsact-dev/ecsact_lang_rust"
license = "MIT"
homepage = "https://ecsact.dev"
description = "Ecsact proc macros"

[lib]
proc-macro = true

[dependencies]
ecsact = { path = "../ecsact", version = "0.1.0" }
proc-macro2 = "1.0.49"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full"] }

[build-dependencies]

