load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("//:codegen_plugin.bzl", "rust_ecsact_codegen_plugin")

package(default_visibility = ["//visibility:public"])

rust_shared_library(
    name = "ecsact_rust_codegen_bin",
    aliases = aliases(),
    srcs = glob(["src/*.rs"]),
    deps = [
        "//ecsact",
        "//ecsact_dylib_runtime",
    ] + all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = ["//ecsact_macro"] + all_crate_deps(
        proc_macro = True,
    ),
)

rust_ecsact_codegen_plugin(
    name = "ecsact_rust_codegen",
    rust_shared_library = ":ecsact_rust_codegen_bin",
    output_extension = "rs",
)
