[package]
name = "ecsact_rust_codegen"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/ecsact-dev/ecsact_lang_rust"
license = "MIT"
homepage = "https://ecsact.dev"
description = "Ecsact rust code generator"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
ecsact_macro = { path = "../ecsact_macro", version = "0.1.0" }
ecsact = { path = "../ecsact", version = "0.1.0" }
ecsact_dylib_runtime = { path = "../ecsact_dylib_runtime", version = "0.1.0" }
quote = "1.0.21"
proc-macro2 = "1.0.49"
indented = "0.1.0"

