[package]
name = "ecsact_example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
ecsact = { path = "../ecsact" }
ecsact_macro = { path = "../ecsact_macro" }
ecsact_system_execution_context = { path = "../ecsact_system_execution_context" }

[build-dependencies]
ecsact_rust_source_codegen = { path = "../rust_source_codegen" }

[build]
target = "wasm32-unknown-unknown"
linker-flavor = "em"

