[package]
name = "ecsact_example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ecsact = { path = "../ecsact" }
ecsact_macro = { path = "../ecsact_macro" }
ecsact_system_execution_context = { path = "../ecsact_system_execution_context" }

[build-dependencies]
ecsact_rust_source_codegen = { path = "../rust_source_codegen" }
ecsact_rtb = { path = "../ecsact_rtb" }

